force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <pluralLabel>Quotes</pluralLabel>
    <nameField>
        <label>Quote Name</label>
        <type>AutoNumber</type>
        <displayFormat>Q-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <type>Lookup</type>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Lookup</type>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>